k8s/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"cloudarmor-staging-test"}}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    app: istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    k8s-app: istio
    kubernetes.io/cluster-service: "true"
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: status-port
    nodePort: 31177
    port: 15020
    protocol: TCP
    targetPort: 15020
  - name: http2
    nodePort: 30444
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 32731
    port: 443
    protocol: TCP
    targetPort: 443
  - name: tcp
    nodePort: 31896
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: https-kiali
    nodePort: 31765
    port: 15029
    protocol: TCP
    targetPort: 15029
  - name: https-prometheus
    nodePort: 32681
    port: 15030
    protocol: TCP
    targetPort: 15030
  - name: https-grafana
    nodePort: 31448
    port: 15031
    protocol: TCP
    targetPort: 15031
  - name: https-tracing
    nodePort: 30065
    port: 15032
    protocol: TCP
    targetPort: 15032
  - name: tls
    nodePort: 32112
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
  sessionAffinity: None
  type: NodePort
