k8s/istio-health-gateway.yaml
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: istio-ingress
#   namespace: istio-system
#   #annotations:
#     #kubernetes.io/ingress.global-static-ip-name: staging-test
# spec:
#   rules:
#   - host: "*.example.com"
#     http:
#       paths:
#       - backend:
#           serviceName: istio-ingressgateway
#           servicePort: 80
#       - backend:
#           serviceName: istio-ingressgateway
#           servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  #annotations:
    #kubernetes.io/ingress.global-static-ip-name: staging-test
spec:
  rules:
  - host: "*.example.com"
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 443
  backend:
      serviceName: istio-ingressgateway
      servicePort: 15020
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 15020
      name: healthcheck
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
  name: health
  namespace: istio-system
spec:
  gateways:
  - health-gateway
  hosts:
  - '*'
  http:
  - match:
    - headers:
        user-agent:
          prefix: GoogleHC
      method:
        exact: GET
      uri:
        exact: /
    rewrite:
      authority: istio-ingressgateway.istio-system.svc.cluster.local:15020
      uri: /healthz/ready
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 15020
