k8s/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio
  namespace: istio-system
  #annotations:
    #kubernetes.io/ingress.global-static-ip-name: staging-test
spec:
  backend:
      serviceName: istio-ingressgateway
      servicePort: 80
